feat: add QR code generated
