# docs/swagger.json
@@ -473,6 +473,10 @@
                 "original_url": {
                     "type": "string"
                 },
+                "qr_code": {
+                    "description": "base64 encoded PNG",
+                    "type": "string"
+                },
                 "short_code": {
                     "type": "string"
                 },
